Añadido cambio de lenguaje

--- a/Damas/src/damas/mensajes_en_US.properties
+++ b/Damas/src/damas/mensajes_en_US.properties
@@ -11,4 +11,4 @@ spanish_button= SPANISH
 English_button= ENGLISH
 not_exit_jugador=Player doesn't exist
 welcome_label= Welcome please charge or choose a new game
-
+language_label=Language changed to English
