--- a/Damas/src/damas/mensajes_es.properties
+++ b/Damas/src/damas/mensajes_es.properties
@@ -11,3 +11,4 @@ spanish_button= ESPA\u00d1OL
 English_button= INGL\u00c9S
 not_exit_jugador=No existe jugador
 welcome_label= Bienvenido, Cargue o inicie nueva partida
+language_label=Idioma del juego cambiado a espa\u00f1ol
