--- a/Damas/src/damas/mensajes_en_US.properties
+++ b/Damas/src/damas/mensajes_en_US.properties
@@ -12,3 +12,29 @@ English_button= ENGLISH
 not_exit_jugador=Player doesn't exist
 welcome_label= Welcome please charge or choose a new game
 language_label=Language changed to English
+controlador-------------
+name_comenzar_jugar= Introduce a name and select a play mode to start the game
+hello=Hello
+Start_user= Start the game selecting a tab
+name_file=Write the name of the file you want to load
+turno_selec_Tab=Your turn. Select a tab for move
+habilitar_siguiente=Your turn. Touch button move machine
+move_tab_pos=You moved your tab from position
+seguir_comiendo=Keep going. Choose your move 
+contrincante_mueve=Finish your turn. Click the button for move computer
+select_move=Choose a position for move your tab
+select_valid_box=Select valid box
+have_to_select= You have to choose your tab for move
+select_move1=Choose a position for move your tab
+attack_response=Your opponent moved
+turno_have_move=Is your turn, if you don't move your opponent can't move
+file_not_found=The file doesn't found
+file_to_save=Write the name of the file you want to save
+game_finish=The game is finished. Load a new game o start another one.
+turn_opponent=Your opponent have to move, click the button move computer
+dont_move_load_file=You can't play. You have to load a file or start a new game
+derrota=Oh! \u00a1You loose! Try again!
+stadistics=Stadisticses
+victoria=Congratulations You win!!
+
+
