--- a/Damas/src/damas/mensajes_en_US.properties
+++ b/Damas/src/damas/mensajes_en_US.properties
@@ -1,40 +1,40 @@
 name_label=Name
 play_mode_label=Play mode
-attack_mode_radio_button=Attack mode
+attack_mode_radio_button=Agressive mode
 defensive_mode_radio_button=Defensive mode
 random_mode_radio_button=Random mode
 save_game_button= Save game
 charge_game_button=Load game
-move_machine= Move computer
+move_machine= Opponent turn
 start_button= Start
 spanish_button= SPANISH
 English_button= ENGLISH
 not_exit_jugador=Player doesn't exist
-welcome_label= Welcome please charge or choose a new game
+welcome_label= Welcome. Please, load a board or start a new game
 language_label=Language changed to English
 controlador-------------
 name_comenzar_jugar= Introduce a name and select a play mode to start the game
 hello=Hello
-Start_user= Start the game selecting a tab
+Start_user= Start the game selecting a piece you want to move
 name_file=Write the name of the file you want to load
-turno_selec_Tab=Your turn. Select a tab for move
-habilitar_siguiente=Your turn. Touch button move machine
-move_tab_pos=You moved your tab from position
-seguir_comiendo=Keep going. Choose your move 
-contrincante_mueve=Finish your turn. Click the button for move computer
-select_move=Choose a position for move your tab
+turno_selec_Tab=Your turn. Select a piece you want to move
+habilitar_siguiente=Your turn. Press the button Opponent turn
+move_tab_pos=You moved your piece from position
+seguir_comiendo=It's your turn again. Select the position you want to move the piece
+contrincante_mueve=Your turn is over. Click the button for knowing your opponent's move
+select_move=Choose a position for move your piece
 select_valid_box=Select valid box
-have_to_select= You have to choose your tab for move
-select_move1=Choose a position for move your tab
-attack_response=Your opponent moved
+have_to_select= You have to choose your piece in order to move it
+select_move1=Choose a position in order to move your piece in 
+attack_response=Your opponent has make his move
 turno_have_move=Is your turn, if you don't move your opponent can't move
-file_not_found=The file doesn't found
+file_not_found=File doesn't found
 file_to_save=Write the name of the file you want to save
 game_finish=The game is finished. Load a new game o start another one.
-turn_opponent=Your opponent have to move, click the button move computer
+turn_opponent=Your opponent have to move, click the button Opponent turn
 dont_move_load_file=You can't play. You have to load a file or start a new game
-derrota=Oh! \u00a1You loose! Try again!
-stadistics=Stadisticses
-victoria=Congratulations You win!!
+derrota=Oh! You lost the game! Try again!
+stadistics=STATISTICS
+victoria=Congratulations, you win!
 
 
